# roadmap-service

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  pr-docs-check.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: api.py  database.py  db_schema.sql  jira_sync.py  logging_config.py  metrics.py  models.py  services.py
backend/tests/: conftest.py  test_api.py  test_color_logic.py  test_department_team.py  test_jira_sync.py
docs/: manual-qa.md
docs/architecture/: c1-context.md  c2-containers.md  c3-components-backend.md  c3-components-frontend.md  c4-code-color-logic.md
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  routes.js
frontend/src/components/: ColorLegend.jsx  DepartmentTeamFilter.jsx  ProductReleaseFilter.jsx  ProductSection.jsx  RoadmapItem.jsx  RoadmapTable.jsx
frontend/src/pages/: RoadmapView.jsx
frontend/src/services/: roadmapApi.js
specs/001-build-a-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-build-a-docker/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-ui-upgrade-the/: plan.md  spec.md  tasks.md
specs/004-docs-project-architecture/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-build-the-actual/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+13 files in other folders)
