[tool.poetry]
name = "roadmap-backend"
version = "0.1.0"
description = "FastAPI backend for roadmap visualization"
authors = ["Canonical Engineering"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.0.0"
httpx = "^0.24.0"
asyncpg = "^0.28.0"
jira = "^3.6.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"
