[tool.poetry]
name = "roadmap-backend"
version = "0.1.0"
description = "FastAPI backend for roadmap visualization"
authors = ["maksim.beliaev@canonical.com"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.12.0"
httpx = "^0.28.1"
asyncpg = "^0.28.0"
jira = "^3.10.5"
psycopg2-binary = "^2.9.11"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
